# blog

./: .clinerules  .env.example  .envrc  .gitignore  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  .textlintrc  CLAUDE.md  Makefile  blogsync.yaml  blogsync.yaml.tmpl  last_publish_time  package-lock.json  package.json  prh.yml  renovate.json
.claude/commands/: new-entry.md
.claude/skills/create-entry/: SKILL.md
.claude/skills/entry/: SKILL.md
.claude/skills/review-entry/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: setup-claude-plugins.sh
.github/: copilot-instructions.md
.github/workflows/: blog.yml  textlint.yml
docs/: contents-guideline.md
kiririmode.hatenablog.jp/entry/: 20061117.md  20061126.md  20061128.md  20070108.md  20070116.md  20070429.md
kiririmode.hatenablog.jp/entry/20061101/: 1181194156.md  1181194157.md
kiririmode.hatenablog.jp/entry/20061102/: 1181194081.md
kiririmode.hatenablog.jp/entry/20061103/: 1181194046.md
kiririmode.hatenablog.jp/entry/20061104/: 1181193998.md
kiririmode.hatenablog.jp/entry/20061105/: 1181193943.md
kiririmode.hatenablog.jp/entry/20061106/: 1181193895.md
kiririmode.hatenablog.jp/entry/20061230/: p1.md  (+2 more)
kiririmode.hatenablog.jp/entry/20240105/testpj/: README.md  pyproject.toml
kiririmode.hatenablog.jp/entry/20240105/testpj/src/testpj/: __init__.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: check.sh  prepare-publish.js  publish.sh
utils/: post_blog.sh  textlint.sh
(+2956 files in other folders)
