[project]
name = "testpj"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "kiririmode", email = "kiririmode@gmail.com" }]
dependencies = [
    "flask>=2.0, <3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "testpj:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black>=23"]

[tool.rye.scripts]
devserver = { cmd = "flask --app ./src/testpj/hello.py run --debug" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/testpj"]
